methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:23: error: overriding method recule in class SimpleBuggle of type (x$1: Int)Unit;
 method recule needs `override' modifier
def recule(nbPas:Int) {
    ^FlowerPot:23: error: overriding method recule in class AbstractBuggle of type (x$1: Int)Unit;
 method recule needs `override' modifier
def recule(nbPas:Int) {
    ^